--- a/box.css
+++ b/box.css
@@ -1,23 +1,22 @@
+body{
+    padding-left: 30%;
+    padding-right: 30%;
+}
+
 .container {
     position: relative;
     width: 50%;
   }
   
-  table {
+  .table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
-    width: 100%;
-    margin: 3cm;
+    margin: 300px;
   }
   
   td, th {
     border: 1px solid #dddddd;
     text-align: left;
-    padding: 8px;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #dddddd;
   }
   
   .image {
