--- a/portfolio.css
+++ b/portfolio.css
@@ -1,7 +1,68 @@
-.img{
-    background-color: rgb(169, 226, 213);
+
+head{
+    background-color: black;
+}
+.user img{
+    height: 50px;
+    width: 50px;
     position:absolute;
-   top: 25px;;
+   top: 15px;;
    left: 25px;
     
 }
+
+.top{
+    background-color: rgb(88, 88, 88);
+     top: 0;
+     padding: 5px;
+     color: rgb(78, 75, 129);
+}
+
+.about{
+    background-color: rgb(154, 154, 154);
+    position: absolute;
+    top: 9PX;
+    left: 100px;
+}
+.about:hover{
+    background-color: rgb(115, 185, 246);
+}
+.education{
+    background-color: rgb(154, 154, 154);
+    position: absolute;
+    top: 9PX;
+    left: 200px;
+
+}
+
+.education:hover{
+    background-color: rgb(115, 185, 246);
+}
+
+
+
+  .work-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  .work:hover{
+    background-color:rgb(115, 185, 246);
+  }
+
+  .work:hover .work-content {
+   
+
+display: contents;}
+
+.work{
+    background-color: rgb(154, 154, 154);
+    position: absolute;
+    top: 9PX;
+    left: 345px;
+
+}
+
+
