--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ button{
     font-size: 90px;
     align-items: center;
     justify-content: center;
+    text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
