--- a/style.css
+++ b/style.css
@@ -1,35 +1,50 @@
-body{
-    margin: 0%;
-    padding:0%;
+html {
+    scroll-behavior: smooth;
 }
-.total{
-height: 100vh;
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-.top{
-    background-color:skyblue;
+
+.top {
+    background-color: skyblue;
     width: 100%;
     height: 5%;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     justify-content: space-evenly;
+    align-items: center;
+    position: fixed; /* Fixed position to stick to the top */
+    top: 0; /* Align at the top of the viewport */
+    left: 0; /* Align at the left edge */
+    z-index: 1000; /* Ensure it stays on top of other content */
+    border-bottom: 2px solid #000; /* Optional: adds a bottom border for better separation */
 }
 
-button{
-    flex-wrap: wrap;
+button {
     height: 25px;
     background-color: rgb(0, 126, 237);
-    border: 0cap;
-    margin-top: 6px;
-    border-radius: 25%;
+    border: none;
+    border-radius: 15px; /* Increased border-radius for more curved edges */
     color: aliceblue;
+    padding: 5px 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease; /* Smooth transition for hover effect */
 }
 
+button:hover {
+    background-color: rgb(0, 100, 200);
+}
 
+.total {
+    min-height: 100vh;
+    padding-top: 5%; /* Add padding to the top to accommodate the fixed navbar */
+}
 
-.intro{
+.intro {
     display: flex;
-    flex-wrap: wrap;
     margin: 5%;
     height: 300px;
     align-items: center;
@@ -37,33 +52,30 @@ button{
     background-color: rgb(162, 179, 179);
 }
 
-.name{
-    display: flex;
-    flex-wrap: wrap;
+.name {
     height: 200px;
-    font-size: 90px;
+    font-size: 10vw; /* Adjust font size based on viewport width */
+    font-family: 'Great Vibes', cursive; /* Calligraphy font */
+    display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.about{
-    height: 100vh;
+.about, .edu {
+    padding: 2%;
 }
 
-.who{
-    
+.who, .hobby, .qualification {
     background-color: gray;
     display: flex;
-    flex-wrap: wrap;
-    font-size: 60px;
     align-items: center;
     justify-content: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 60px;
+    padding: 20px;
 }
 
-.interst{
+.interst, .aboutschool, .aboutcollege {
     margin: 1%;
     font-size: 20px;
     display: flex;
@@ -72,78 +84,64 @@ button{
     padding: 3%;
 }
 
-.hobby{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+.hobby {
     font-size: 40px;
-    background-color: gray;
 }
 
-.edit{
-display: flex;
-flex-wrap: wrap;
-    font-size: 30px;
+.edit {
     display: flex;
+    flex-wrap: wrap;
+    font-size: 30px;
     text-align: justify;
     padding: 1%;
 }
 
-.edu{
-    height: 100vh;
-
-}
-
-.qualification{
-    margin-top: 100px;
-    background-color: gray;
-    display: flex;
-    flex-wrap: wrap;
-    font-size: 60px;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-.school{
-    
-    font-size: 25PX;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-}
-
-.aboutschool{
-    margin-top: -20px;;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    font-size: 25px;
-    text-align: justify;
-    padding-left: 2%;
-    padding-right: 2%;
-}
-
-.college{
-   font-size: 20PX;
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: center;
-   text-align: justify;
-
-}
-
-.aboutcollege
-{  
-     padding-right: 2%;
-     padding-left: 2%;
+.school, .college {
     font-size: 25px;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
     align-items: center;
-    text-align: justify;
+    justify-content: center;
+    padding: 20px;
+    text-align: center;
+}
+
+/* Media Queries for responsiveness */
+@media (max-width: 1200px) {
+    .name {
+        font-size: 8vw;
+    }
+
+    .who, .hobby, .qualification {
+        font-size: 50px;
+    }
+}
+
+@media (max-width: 992px) {
+    .name {
+        font-size: 7vw;
+    }
+
+    .who, .hobby, .qualification {
+        font-size: 40px;
+    }
+}
+
+@media (max-width: 768px) {
+    .name {
+        font-size: 6vw;
+    }
+
+    .who, .hobby, .qualification {
+        font-size: 30px;
+    }
+}
+
+@media (max-width: 576px) {
+    .name {
+        font-size: 5vw;
+    }
+
+    .who, .hobby, .qualification {
+        font-size: 25px;
+    }
 }
