--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
     scroll-behavior: smooth;
+    background-color: #000;
 }
 
 body {
@@ -45,11 +46,15 @@ button:hover {
 
 .intro {
     display: flex;
-    margin: 5%;
+    margin-bottom: 5%;
+    margin-left: 2%;
+    margin-right: 2%;
+
     height: 300px;
     align-items: center;
     justify-content: center;
-    background-color: rgb(162, 179, 179);
+    background-color:gray;
+    color: aliceblue;
 }
 
 .name {
@@ -60,10 +65,14 @@ button:hover {
     align-items: center;
     justify-content: center;
     text-align: center;
+    color: aliceblue;
+
 }
 
 .about, .edu {
     padding: 2%;
+    color: aliceblue;
+
 }
 
 .who, .hobby, .qualification {
@@ -73,6 +82,8 @@ button:hover {
     justify-content: center;
     font-size: 60px;
     padding: 20px;
+    color: aliceblue;
+
 }
 
 .interst, .aboutschool, .aboutcollege {
@@ -82,10 +93,14 @@ button:hover {
     flex-wrap: wrap;
     text-align: justify;
     padding: 3%;
+    color: aliceblue;
+
 }
 
 .hobby {
     font-size: 40px;
+    color: aliceblue;
+
 }
 
 .edit {
@@ -94,6 +109,8 @@ button:hover {
     font-size: 30px;
     text-align: justify;
     padding: 1%;
+    color: aliceblue;
+
 }
 
 .school, .college {
@@ -103,6 +120,8 @@ button:hover {
     justify-content: center;
     padding: 20px;
     text-align: center;
+    color: aliceblue;
+
 }
 
 /* Media Queries for responsiveness */
