--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .top {
-    background: linear-gradient(135deg, rgba(0, 191, 255, 0.8), rgba(0, 0, 0, 0.8));
+    background: linear-gradient(135deg, rgba(10, 117, 166, 0.8), rgba(0, 0, 0, 0.8));
     background-size: 200% 200%; 
     animation: neon-background 3s ease-in-out infinite; 
 
@@ -30,6 +30,27 @@ body {
     z-index: 1000; 
     border-bottom: 2px solid #000; 
 }
+.name {
+    height: 200px;
+    font-size: 10vw;
+    font-family: 'Great Vibes', cursive;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: aliceblue;
+    transition: text-shadow 0.6s ease-in-out; /* Adjusted duration and timing function */
+}
+
+.name:hover,
+.name:focus {
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 
+                 0 0 20px rgba(255, 255, 255, 0.6), 
+                 0 0 30px rgba(255, 255, 255, 0.4), 
+                 0 0 40px rgba(247, 255, 255, 0.2);
+}
+
+
 
 button {
     
@@ -45,7 +66,7 @@ button {
 }
 
 button:hover {
-    background-color: rgb(0, 100, 200);
+    background-color: rgb(200, 0, 0);
 }
 
 .total {
@@ -110,7 +131,7 @@ button:hover {
     animation: neon-background 15s ease-in-out infinite;
 }
 
-.interst, .aboutschool, .aboutcollege {
+.aboutschool, .aboutcollege {
     margin: 1%;
     font-size: 20px;
     display: flex;
@@ -120,9 +141,20 @@ button:hover {
     color: aliceblue;
 }
 
+.interst{
+    font-size: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: justify;
+    padding: 3%;
+    padding-bottom: 1%;
+    color: aliceblue;
+}
+
 .hobby {
     font-size: 40px;
     color: aliceblue;
+    margin-bottom: 1%;
 }
 
 .edit {
